--- a/app/templates/akt.html
+++ b/app/templates/akt.html
@@ -16,9 +16,9 @@
 </head>
 <body>
 
-    <nav class="navbar">
+    <nav class="navbar bg-light">
         <div class="topBar">
-            <img id="nav-logo" src="/static/Empco-logo-web-07.png" >
+            <img id="nav-logo" src="/static/AKT-logo-02.png " >
         </div>
             <i class="uil uil-bars toggle"></i>
         </div>
@@ -46,9 +46,7 @@
 
         
     
-        {% block content %}
-    
-        {% endblock content %}
+
 
 
 
