--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -3,6 +3,62 @@
 
 {% block content %}
 
+<div class="contact-grid">
+
+    <div class="container pinside80">
+        <div class="meetteam">
+            <h2>In Trusted Hands</h2>
+            <span>Our expert sales team team provides real-world solutions that help you achieve your goals.</span>
+        </div>
+        <div class="profile-card">
+            <img src="http://www.civilbeat.org/wp-content/uploads/2015/10/nick-grube5square-400x400.jpg">
+            <div>
+                <a href="#" target="_blank" class="fa fa-linkedin-square" aria-hidden="true"></a>
+                <h2>Liam Edgecomb</h2>
+                <h3>CEO</h3>
+            </div>
+        </div>
+
+        <div class="profile-card">
+            <img src="https://vlgux.com/img/team/headshots/nick-bray.jpg">
+            <div>
+                <a href="#" target="_blank" class="fa fa-linkedin-square" aria-hidden="true"></a>
+                <h2>Liam EdgeComb</h2>
+                <h3>Product Specialist</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="contact-container">  
+        <form target="_blank" id="contact" action="https://formsubmit.co/your@email.com" method="POST">
+            <h3>Request Information</h3>
+            <h4>Contact our sales team for a custom quote on products</h4>
+            <fieldset>
+                <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+            </fieldset>
+            <fieldset>
+                <input placeholder="Your Email Address" type="email" tabindex="2" required>
+            </fieldset>
+            <fieldset>
+                <input placeholder="Your Phone Number" type="tel" tabindex="3" required>
+            </fieldset>
+            <fieldset>
+                <input placeholder="Your Company" type="url" tabindex="4" required>
+            </fieldset>
+            <fieldset>
+                <textarea placeholder="Type your message here...." tabindex="5" required></textarea>
+            </fieldset>
+            <fieldset>
+                <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+            </fieldset>
+        </form>
+    </div>
+
+</div>
+
+ 
+
+
 
 
 
