--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,13 +3,6 @@
 
 {% block content %}
 
-
-
-
-
-
-    
-
   
   <div class="accordion">
     <ul>
@@ -20,7 +13,7 @@
       </li>
       <li>
         <div> <a href="{{ url_for('highway_construction_lighting') }}">
-          <h2>Highway Construction Lighting </h2>
+          <h2>Highway Lighting </h2>
           </a> </div>
       </li>
       <li>
@@ -39,20 +32,124 @@
 
 
 
-<!-- CURTAIN  -->
+<!-- test  -->
 
 
+<section class="about-us sec-padd">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-sm-12">
+                <div class="text">
+                    <h1>Our Mission</h1>
 
+                    <p>The mission of Empco-Lite is to fully satisfy the expectations of our customers by 
+                    
+                    producing the highest quality products on time, each and everytime, 
 
+                    through the use of effective teamwork, employee involvement,
 
-
-
-
-<div class="curtain">
-    <div class="invert">
-      <h2>Quality</h2>
+                    and a dedication to excellence in everything we do with a view of continuous improvement.</p>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+</section>
+
+<section class="section--primary--alt bg-image bg-image-2 pinside80">
+    <div class="about-container text--center">
+    <h3>Value Added Services</h3>
+        <div class="col-5 text--left">
+            <ul>
+                <li>Imprinting</li>
+                <li>Packaging</li>
+                <li>Assembly</li>
+
+            </ul>
+        </div>
+
+        <div class="col-5 text--left">
+            <ul>
+                <li>Insert Molding</li>
+                <li>Sonic Welding</li>
+
+            </ul>
+        </div>
+
+        <div class="col-5 text--left">
+            <ul>
+
+
+                <li>JIT Processing</li>
+                <li>Drop Shipping</li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+
+    <div class="section-space80">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="mb60 text-center section-title">
+                        <!-- section title start-->
+                        <h1>Why People Choose Us</h1>
+                        <p>Suspendisse aliquet varius nunc atcibus lacus sit amet coed portaeri sque mami luctus viveed congue lobortis faucibus.</p>
+                    </div>
+                    <!-- /.section title start-->
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <div class="bg-white bg-boxshadow">
+                        <div class="row">
+                            <div class="col-md-4 col-sm-6 nopadding col-xs-12">
+                                <div class="bg-white pinside60 number-block outline">
+                                    <div class="mb20"><i class="icon-command  icon-4x icon-primary"></i></div>
+                                    <h3>Dedicated Specialists</h3>
+                                    <p>Duis eget diam quis elit erdiet alidvolutp terdum tfanissim non intwesollis eu mauris.</p>
+                                    <a href="{{ url_for('contact') }}" class="btn btn-outline mt20">Meet the team</a> </div>
+                            </div>
+                            <div class="col-md-4 col-sm-6 nopadding col-xs-12">
+                                <div class="bg-white pinside60 number-block outline">
+                                    <div class="mb20"><i class="icon-cup  icon-4x icon-primary"></i></div>
+                                    <h3>Industry Leaders</h3>
+                                    <p>Integer facilisis fringilla dolor ut luctus lvinar felis miat velitliquam at fermentum orci.</p>
+                                    <a href="{{ url_for('about') }}" class="btn btn-outline mt20">about</a> </div>
+                            </div>
+                            <div class="col-md-4 col-sm-12 nopadding col-xs-12">
+                                <div class="bg-white pinside60 number-block outline">
+                                    <div class="mb20"><i class="icon-calculator  icon-4x icon-primary"></i></div>
+                                    <h3>Pride in our Work</h3>
+                                    <p> Integer faisis fringilla dolor ut luctus nisi eneinar felis viverra dignissim fermentum orci.</p>
+                                    <a href="{{ url_for('process') }}" class="btn btn-outline mt20">Our Process</a> </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <section class="text--center">
+        <div class="about-container">
+        <h3>Our Structure</h3>
+        <p>See how AKT Corporation, Elgin Molded, and Empco-Lite work side by side.</p>
+        <a href="{{ url_for('sister_companies') }}" class="btn">Learn More</a>
+        </div>
+    </section>
+
+    <section class="text--center">
+        <div class="about-container">
+        <h3>Sponsorships</h3>
+        <img src="/static/Safety.png" height="50%" width="50%">
+        </div>
+    </section>
+
+
+
+
+
 
 
 
