--- a/app/templates/lighting_types/airport_lighting.html
+++ b/app/templates/lighting_types/airport_lighting.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-<div class="wrapper lighting-type"> 
+<div class="wrapper product-line"> 
     <h1>Airport Lighting</h1>
     <div class="cols">
         <a href="{{ url_for('model_630') }}">
